--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,12 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "cn.belier" "\0"
-            VALUE "FileDescription", "certimate" "\0"
+            VALUE "FileDescription", "Certimate" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "certimate" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2025 cn.belier. All rights reserved." "\0"
+            VALUE "InternalName", "Certimate" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2025 Belier. All rights reserved." "\0"
             VALUE "OriginalFilename", "certimate.exe" "\0"
-            VALUE "ProductName", "certimate" "\0"
+            VALUE "ProductName", "Certimate" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
