ci: 安卓打包使用 ubuntu 系统

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
         type: [ android, ios, macos, windows, linux ]
         include:
           - type: android
-            os: macos-latest
+            os: ubuntu-latest
           - type: ios
             os: macos-latest
           - type: macos
