--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ publish_to: 'none'
 version: 0.0.5+5
 
 environment:
-  sdk: ^3.10.0
-  flutter: ">=3.38.0"
+  sdk: ^3.8.0
+  flutter: ">=3.32.0"
 
 dependencies:
   flutter:
@@ -20,18 +20,18 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   drift: ^2.28.1
-  talker: ^5.1.3
+  talker: ^5.1.9
   sp_util: ^2.0.3
   sqflite: ^2.4.2
   safemap: ^2.1.0
   graphview: ^1.5.1
   go_router: ^16.3.0
-  local_auth: ^3.0.0
+  local_auth: ^2.3.0
   collection: ^1.19.1
   share_plus: ^12.0.1
   flutter_svg: ^2.2.3
   load_switch: ^2.2.0
-  file_picker: ^10.3.7
+  file_picker: ^10.3.8
   easy_refresh: ^3.4.0
   url_launcher: ^6.3.2
   drift_flutter: ^0.2.6
@@ -39,17 +39,18 @@ dependencies:
   flutter_hooks: ^0.21.3+1
   hooks_riverpod: ^3.0.3
   inflector_dart: ^1.0.2
-  talker_flutter: ^5.1.3
+  talker_flutter: ^5.1.9
   window_manager: ^0.5.1
   drift_db_viewer: ^2.1.0
   json_annotation: ^4.9.0
   cupertino_icons: ^1.0.8
   material_design: ^0.28.1
   flutter_riverpod: ^3.0.3
+  flutter_exit_app: ^2.0.0
   pull_down_button: ^0.10.2
   device_info_plus: ^12.3.0
   flex_color_scheme: ^8.4.0
-  talker_dio_logger: ^5.1.3
+  talker_dio_logger: ^5.1.9
   flutter_json_view: ^1.1.5
   package_info_plus: ^9.0.0
   extra_hittest_area: ^1.0.0
@@ -61,7 +62,7 @@ dependencies:
   flutter_form_builder: ^10.2.0
   flutter_smart_dialog: ^4.9.8+9
   flutter_native_splash: ^2.4.7
-  flutter_secure_storage: ^10.0.0-beta.5
+  flutter_secure_storage: ^10.0.0
   form_builder_validators: ^11.2.0
   flutter_platform_widgets: ^9.0.0
   extended_nested_scroll_view: ^6.2.1
@@ -77,10 +78,12 @@ dependencies:
     git: https://github.com/diegoveloper/flutter_keyboard_actions
   device_wrapper:
     git: https://github.com/belier-cn/device_wrapper
+  flutter_secure_storage_ohos:
+    git:
+      url: https://github.com/belier-cn/flutter_ohos_packages
+      path: flutter_secure_storage_ohos
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
   freezed: ^3.2.3
   drift_dev: ^2.28.1
   intl_utils: ^2.8.11
