--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,49 +16,76 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        type: [ android, ios, macos, windows, linux, web ]
+        type: [ android, ios, macos, windows, linux, web, ohos ]
         include:
           - type: android
             os: ubuntu-latest
+            flutter: 3.38.5
           - type: ios
             os: macos-latest
+            flutter: 3.38.5
           - type: macos
             os: macos-latest
+            flutter: 3.38.5
           - type: windows
             os: windows-latest
+            flutter: 3.38.5
           - type: linux
             os: ubuntu-latest
+            flutter: 3.38.5
           - type: web
             os: ubuntu-latest
+            flutter: 3.38.5
+          - type: ohos
+            os: ubuntu-latest
+            flutter: oh-3.32.4-dev
 
     steps:
       - uses: actions/checkout@v4
+        name: Checkout code
       - uses: actions/setup-java@v4
+        name: Setup Java SDK
         if: ${{ matrix.type == 'android' }}
         with:
           distribution: "zulu"
           java-version: "17"
       - uses: actions/setup-node@v6
+        name: Setup Node SDK
         if: ${{ matrix.type == 'macos' }}
         with:
           node-version: latest
-      - uses: subosito/flutter-action@v2
+      - if: ${{ matrix.type != 'ohos' }}
+        name: Setup Flutter SDK
+        uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.38.4
+          flutter-version: ${{ matrix.flutter }}
           channel: "stable"
-      - name: Patch flutter cupertino nav_bar.dart
+      - if: ${{ matrix.type != 'ohos' }}
+        name: Patch flutter cupertino nav_bar.dart
         shell: bash
         run: |
           echo "Flutter root: $FLUTTER_ROOT"
           target="$FLUTTER_ROOT/packages/flutter/lib/src/cupertino/nav_bar.dart"
           echo "Patching $target"
-          curl -fsSL "https://github.com/belier-cn/certimate_flutter/releases/download/v0.0.1/cupertino_nav_bar_3.38.4.dart" -o "$target"
+          curl -fsSL "https://github.com/belier-cn/certimate_flutter/releases/download/v0.0.1/cupertino_nav_bar_${{ matrix.flutter }}.dart" -o "$target"
+      - if: ${{ matrix.type == 'ohos' }}
+        name: Setup Harmony SDK
+        uses: openharmony-rs/setup-ohos-sdk@v0.2
+        with:
+          version: 6.0.0.1
+      - if: ${{ matrix.type == 'ohos' }}
+        name: Setup Harmony Flutter SDK
+        run: |
+          cat pubspec_ohos_overrides.yaml >> pubspec.yaml
+          git clone --branch ${{ matrix.flutter }} https://gitcode.com/openharmony-tpc/flutter_flutter.git harmony_flutter
+          export PATH="$PWD/harmony_flutter/bin:$PATH"
+          flutter --version
       - name: Install dependencies
         run: |
-          dart pub global activate fastforge
+          flutter pub global activate fastforge
           flutter pub get
-          dart run intl_utils:generate
-          dart run build_runner build --delete-conflicting-outputs
+          flutter pub run intl_utils:generate
+          flutter pub run build_runner build --delete-conflicting-outputs
       - if: ${{ matrix.type == 'android' }}
         name: Build android
         run: |
@@ -95,6 +122,19 @@ jobs:
           sudo apt-get update
           sudo apt install -y clang cmake ninja-build pkg-config libgtk-3-dev liblzma-dev libsecret-1-dev libfuse2 locate
           fastforge package --platform linux --targets appimage --artifact-name certimate-${{ github.ref_name }}-${{ matrix.type }}.appimage
+      - if: ${{ matrix.type == 'ohos' }}
+        name: Build ohos
+        run: |
+          echo -n "$HARMONY_SIGNING_BASE64" | openssl base64 -d -A > ohos/signing-configs.json
+          echo -n "$HARMONY_KEYSTORE_BASE64" | openssl base64 -d -A > ohos/certimate.p12
+          echo -n "$HARMONY_CERT_BASE64" | openssl base64 -d -A > ohos/certimate.cer
+          echo -n "$HARMONY_PROFILE_BASE64" | openssl base64 -d -A > ohos/certimate.p7b
+          fastforge package --platform ohos --targets hap
+        env:
+          HARMONY_SIGNING_BASE64: ${{ secrets.HARMONY_SIGNING_BASE64 }}
+          HARMONY_KEYSTORE_BASE64: ${{ secrets.HARMONY_KEYSTORE_BASE64 }}
+          HARMONY_CERT_BASE64: ${{ secrets.HARMONY_CERT_BASE64 }}
+          HARMONY_PROFILE_BASE64: ${{ secrets.HARMONY_PROFILE_BASE64 }}
       - if: ${{ matrix.type == 'web' }}
         name: Build web
         run: |
@@ -107,6 +147,7 @@ jobs:
         with:
           path: build/web
       - if: ${{ matrix.type != 'web' }}
+        name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.type }}
@@ -114,6 +155,7 @@ jobs:
           path: |
             dist/**/*.apk
             dist/**/*.ipa
+            dist/**/*.hap
             dist/**/*.dmg
             dist/**/*.exe
             dist/**/*.appimage
@@ -123,9 +165,11 @@ jobs:
     needs: build
     steps:
       - uses: actions/download-artifact@v4
+        name: Download artifact
         with:
           path: artifacts
       - uses: softprops/action-gh-release@v2
+        name: Create GitHub Release
         with:
           files: artifacts/**
           draft: true
