--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,9 +21,12 @@ dependencies:
   intl: ^0.20.2
   drift: ^2.28.1
   talker: ^5.1.9
+  badges: ^3.1.2
   sp_util: ^2.0.3
   sqflite: ^2.4.2
   safemap: ^2.1.0
+  version: ^3.0.2
+  upgrader: ^12.3.0
   graphview: ^1.5.1
   go_router: ^16.3.0
   local_auth: ^2.3.0
@@ -53,6 +56,7 @@ dependencies:
   talker_dio_logger: ^5.1.9
   flutter_json_view: ^1.1.5
   package_info_plus: ^9.0.0
+  keyboard_detection: ^0.8.1
   extra_hittest_area: ^1.0.0
   freezed_annotation: ^3.1.0
   riverpod_annotation: ^3.0.3
