--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
             flutter: 3.38.5
           - type: ohos
             os: ubuntu-latest
-            flutter: oh-3.32.4-dev
+            flutter: oh-3.32.0-release
 
     steps:
       - uses: actions/checkout@v4
