--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   drift: ^2.28.1
   talker: ^5.1.9
   badges: ^3.1.2
+  crypto: ^3.0.6
+  archive: ^4.0.7
   sp_util: ^2.0.3
   sqflite: ^2.4.2
   safemap: ^2.1.0
@@ -108,4 +110,3 @@ flutter_intl:
   enabled: true
 
 # HarmonyOS dependency_overrides
-
