--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,14 @@ dependencies:
   upgrader: ^12.3.0
   graphview: ^1.5.1
   go_router: ^16.3.0
+  re_editor: ^0.8.0
   local_auth: ^2.3.0
   collection: ^1.19.1
   share_plus: ^12.0.1
   flutter_svg: ^2.2.3
   load_switch: ^2.2.0
   file_picker: ^10.3.8
+  re_highlight: ^0.0.3
   easy_refresh: ^3.4.0
   url_launcher: ^6.3.2
   drift_flutter: ^0.2.6
