--- a/pubspec_ohos_overrides.yaml
+++ b/pubspec_ohos_overrides.yaml
@@ -22,6 +22,7 @@ dependency_overrides:
     git:
       url: https://github.com/belier-cn/flutter_ohos_packages
       path: flex_color_scheme
+      ref: flutter_3.35
   flutter_platform_widgets:
     git:
       url: https://github.com/belier-cn/flutter_ohos_packages
