--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   flutter_exit_app: ^2.0.0
   pull_down_button: ^0.10.2
   device_info_plus: ^12.3.0
+  launch_at_startup: ^0.5.1
   flex_color_scheme: ^8.4.0
   talker_dio_logger: ^5.1.9
   flutter_json_view: ^1.1.5
