--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ dependencies:
   uuid: ^4.5.1
   intl: ^0.20.2
   drift: ^2.28.1
-  talker: ^5.1.9
+  talker: ^5.1.12
   badges: ^3.1.2
   crypto: ^3.0.6
   archive: ^4.0.7
@@ -30,7 +30,7 @@ dependencies:
   version: ^3.0.2
   upgrader: ^12.3.0
   graphview: ^1.5.1
-  go_router: ^16.3.0
+  go_router: ^17.0.1
   re_editor: ^0.8.0
   local_auth: ^2.3.0
   collection: ^1.19.1
@@ -44,28 +44,28 @@ dependencies:
   drift_flutter: ^0.2.6
   path_provider: ^2.1.5
   flutter_hooks: ^0.21.3+1
-  hooks_riverpod: ^3.0.3
+  hooks_riverpod: ^3.2.0
   inflector_dart: ^1.0.2
-  talker_flutter: ^5.1.9
+  talker_flutter: ^5.1.12
   window_manager: ^0.5.1
   drift_db_viewer: ^2.1.0
   json_annotation: ^4.9.0
   cupertino_icons: ^1.0.8
   material_design: ^0.28.1
-  flutter_riverpod: ^3.0.3
+  flutter_riverpod: ^3.2.0
   flutter_exit_app: ^2.0.0
   pull_down_button: ^0.10.2
   device_info_plus: ^12.3.0
   launch_at_startup: ^0.5.1
   flex_color_scheme: ^8.4.0
-  talker_dio_logger: ^5.1.9
+  talker_dio_logger: ^5.1.12
   flutter_json_view: ^1.1.5
   package_info_plus: ^9.0.0
   keyboard_detection: ^0.8.1
   extra_hittest_area: ^1.0.0
   freezed_annotation: ^3.1.0
-  riverpod_annotation: ^3.0.3
-  copy_with_extension: ^9.1.1
+  riverpod_annotation: ^4.0.1
+  copy_with_extension: ^11.0.0
   flutter_inappwebview: ^6.1.5
   chinese_font_library: ^1.2.0
   flutter_form_builder: ^10.2.0
@@ -73,7 +73,7 @@ dependencies:
   flutter_native_splash: ^2.4.7
   flutter_secure_storage: ^10.0.0
   form_builder_validators: ^11.2.0
-  flutter_platform_widgets: ^9.0.0
+  flutter_platform_widgets: ^10.0.1
   extended_nested_scroll_view: ^6.2.1
   flutter_polygon_input_border: ^0.0.1
   form_builder_cupertino_fields: ^0.6.0
@@ -96,14 +96,13 @@ dev_dependencies:
   freezed: ^3.2.3
   drift_dev: ^2.28.1
   intl_utils: ^2.8.11
-  custom_lint: ^0.8.0
-  build_runner: ^2.6.0
-  riverpod_lint: ^3.0.3
+  build_runner: ^2.10.5
+  riverpod_lint: ^3.1.2
   flutter_lints: ^6.0.0
   json_serializable: ^6.9.0
   go_router_builder: ^4.1.0
-  riverpod_generator: ^3.0.3
-  copy_with_extension_gen: ^9.1.1
+  riverpod_generator: ^4.0.2
+  copy_with_extension_gen: ^11.0.0
 
 
 flutter:
@@ -112,4 +111,6 @@ flutter:
 flutter_intl:
   enabled: true
 
-# HarmonyOS dependency_overrides
+dependency_overrides:
+  test_api: ^0.7.9
+  # HarmonyOS dependency_overrides
