--- a/pubspec_ohos_overrides.yaml
+++ b/pubspec_ohos_overrides.yaml
@@ -1,5 +1,6 @@
   intl: ^0.20.2
   drift: 2.23.1
+  riverpod_lint: ^3.1.0
   launch_at_startup: ^0.3.1
   flutter_form_builder: 10.1.0
   drift_flutter:
