--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ dependencies:
   flutter_smart_dialog: ^4.9.8+9
   flutter_native_splash: ^2.4.7
   flutter_secure_storage: ^10.0.0
+  flutter_lucide_animated: ^0.0.4
   form_builder_validators: ^11.2.0
   flutter_platform_widgets: ^10.0.1
   extended_nested_scroll_view: ^6.2.1
