--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ dependencies:
     sdk: flutter
   flutter_web_plugins:
     sdk: flutter
-  dio: ^5.9.0
+  dio: ^5.9.1
   web: ^1.1.1
   path: ^1.9.1
   uuid: ^4.5.1
   intl: ^0.20.2
-  drift: ^2.28.1
-  talker: ^5.1.12
+  drift: ^2.31.0
+  talker: ^5.1.13
   badges: ^3.1.2
   crypto: ^3.0.6
   archive: ^4.0.7
@@ -30,53 +30,53 @@ dependencies:
   version: ^3.0.2
   upgrader: ^12.3.0
   graphview: ^1.5.1
-  go_router: ^17.0.1
+  go_router: ^17.1.0
   re_editor: ^0.8.0
   local_auth: ^2.3.0
   collection: ^1.19.1
   share_plus: ^12.0.1
   flutter_svg: ^2.2.3
   load_switch: ^2.2.0
-  file_picker: ^10.3.8
+  file_picker: ^10.3.10
   re_highlight: ^0.0.3
   easy_refresh: ^3.4.0
   url_launcher: ^6.3.2
   drift_flutter: ^0.2.6
   path_provider: ^2.1.5
   flutter_hooks: ^0.21.3+1
-  hooks_riverpod: ^3.2.0
+  hooks_riverpod: ^3.2.1
   inflector_dart: ^1.0.2
-  talker_flutter: ^5.1.12
+  talker_flutter: ^5.1.13
   window_manager: ^0.5.1
   drift_db_viewer: ^2.1.0
-  json_annotation: ^4.9.0
+  json_annotation: ^4.10.0
   cupertino_icons: ^1.0.8
   material_design: ^0.28.1
-  flutter_riverpod: ^3.2.0
+  flutter_riverpod: ^3.2.1
   flutter_exit_app: ^2.0.0
   pull_down_button: ^0.10.2
   device_info_plus: ^12.3.0
   launch_at_startup: ^0.5.1
   flex_color_scheme: ^8.4.0
-  talker_dio_logger: ^5.1.12
+  talker_dio_logger: ^5.1.13
   flutter_json_view: ^1.1.5
   package_info_plus: ^9.0.0
   keyboard_detection: ^0.8.1
   extra_hittest_area: ^1.0.0
   freezed_annotation: ^3.1.0
-  riverpod_annotation: ^4.0.1
+  riverpod_annotation: ^4.0.2
   copy_with_extension: ^11.0.0
-  flutter_inappwebview: ^6.1.5
+  flutter_inappwebview: ^6.2.0-beta.3
   chinese_font_library: ^1.2.0
-  flutter_form_builder: ^10.2.0
+  flutter_form_builder: ^10.3.0+1
   flutter_smart_dialog: ^4.9.8+9
   flutter_native_splash: ^2.4.7
   flutter_secure_storage: ^10.0.0
-  form_builder_validators: ^11.2.0
+  form_builder_validators: ^11.3.0
   flutter_platform_widgets: ^10.0.1
   extended_nested_scroll_view: ^6.2.1
   flutter_polygon_input_border: ^0.0.1
-  form_builder_cupertino_fields: ^0.6.0
+  form_builder_cupertino_fields: ^0.7.0
   adaptive_dialog:
     git: https://github.com/belier-cn/adaptive_dialog
   flutter_settings_ui:
